Fix register token missing path parameter
