# raiden-swagger-sdk/swagger.yaml
@@ -42,11 +42,45 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Errors'
+  /tokens/(token_address):
+    get:
+      summary: Address of the corresponding token network 
+      description: Returns the address of the corresponding token network for the given token, if the token is registered.
+      tags: 
+        - Tokens
+      operationId: getToken
+      parameters:
+        - in: path
+          name: token_address
+          schema:
+            type: string
+          required: true
+          description: The token address associated with a token network
+      responses:
+        '200':
+          description: The token network address
+          content:
+            application/json:
+              schema:
+                type: string
+        '404':
+          description: No token network found for the provided token address
+          content:
+            application/json:
+              schema:
+                type: string
     put: 
       summary: "Registers a token"
       tags: 
         - Tokens
       description: "If a token is not registered yet (i.e.: A token network for that token does not exist in the registry), we need to register it by deploying a token network contract for that token."
+      parameters:
+        - in: path
+          name: token_address
+          schema:
+            type: string
+          required: true
+          description: The token address
       operationId: registerToken
       responses: 
         '201':
@@ -80,33 +114,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Errors'
-  /tokens/(token_address):
-    get:
-      summary: Address of the corresponding token network 
-      description: Returns the address of the corresponding token network for the given token, if the token is registered.
-      tags: 
-        - Tokens
-      operationId: getToken
-      parameters:
-        - in: path
-          name: token_address
-          schema:
-            type: string
-          required: true
-          description: The token address associated with a token network
-      responses:
-        '200':
-          description: The token network address
-          content:
-            application/json:
-              schema:
-                type: string
-        '404':
-          description: No token network found for the provided token address
-          content:
-            application/json:
-              schema:
-                type: string
   /tokens/(token_address)/partners:
     get:
       summary: List of all partners with whom you have non-settled channels 
